--- a/personal-ai/package.json
+++ b/personal-ai/package.json
@@ -37,6 +37,8 @@
     "postgres": "^3.4.7",
     "react": "19.2.1",
     "react-dom": "19.2.1",
+    "react-markdown": "^10.1.0",
+    "remark-gfm": "^4.0.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "zod": "^4.1.13"
